--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@discordjs/rest": "^0.2.0-canary.0",
     "canvas": "^2.8.0",
     "discord-api-types": "^0.26.0",
+    "discord-modals": "^1.3.9",
     "discord-slash-commands-client": "^1.2.2",
     "discord.js": "^13.4.0",
     "dotenv": "^10.0.0",
